Fix mobile layout issues, navbar links, remove gsap overrides for Work/Edu, reorder sections

--- a/src/components/styles/Landing.css
+++ b/src/components/styles/Landing.css
@@ -160,7 +160,8 @@
   position: absolute;
   z-index: 9;
   top: 12%;
-  left: 0;
+  right: 0;
+  text-align: right;
 }
 .landing-intro h2 {
   margin: 0;
@@ -306,6 +307,7 @@ h2.landing-info-h2 {
     top: 50%;
     left: auto;
     right: 66%;
+    text-align: left;
     transform: translate(0%, -50%);
   }
 
