--- a/src/components/styles/SocialIcons.css
+++ b/src/components/styles/SocialIcons.css
@@ -9,9 +9,9 @@
 }
 .social-icons {
   position: absolute;
-  left: -20px;
+  left: -10px;
   bottom: 20px;
-  display: none;
+  display: flex;
   flex-direction: column;
   gap: 8px;
   z-index: 999;
@@ -85,6 +85,7 @@ div.resume-button span {
   .social-icons {
     display: flex;
     gap: 20px;
+    left: -20px;
   }
   .social-icons a {
     font-size: 28px;
